# rust-dark-light

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: async.rs  color_scheme.rs  detect.rs  notify.rs  sync.rs  watch.rs
examples/detect/: Cargo.toml
examples/notify/: Cargo.toml
examples/notify/src/: main.rs
src/: freedesktop.rs  lib.rs  linux.rs  macos.rs  mode.rs  websys.rs  windows.rs
src/freedesktop/: detect.rs  mod.rs  notify.rs
src/macos/: detect.rs  mod.rs  notify.rs
src/utils/: mod.rs  rgb.rs
src/websys/: detect.rs
src/windows/: detect.rs  notify.rs
