[package]
name = "dark-light"
version = "1.1.1"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/rust-dark-light"
description = "Detect if dark mode or light mode is enabled"
readme = "README.md"
build = "build.rs"

[dependencies]
futures = "0.3.30"
log = "0.4.22"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
ashpd = "0.9.1"
pollster = "0.3.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.1"
objc2-foundation = { version = "0.2.0", features = [
    "NSArray",
    "NSObject",
    "NSString",
] }
objc2-app-kit = { version = "0.2.0", features = [
    "NSAppearance",
    "NSApplication",
    "NSResponder",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["MediaQueryList", "Window"] }
